# barcodereader

./: CMakeLists.txt  main.cpp
kalanlar/: dynamsoft_barkod_sonuclari.xlsx  main.py
